<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AdicionarPacienteActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_pacientes"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone" />

    <EditText
        android:id="@+id/editIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idade"
        android:inputType="number" />

    <EditText
        android:id="@+id/editRegiao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/regi_o" />

    <Spinner
        android:id="@+id/spinnerSintomas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/prompt_selecione_sintomas"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnAdicionarSintoma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_sintoma" />

    <EditText
        android:id="@+id/editSintomas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sintomas_adicionados"
        android:enabled="false" />

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar" />

    <TextView
        android:id="@+id/textDiagnostico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:paddingTop="16dp"
        android:gravity="center"/>
</LinearLayout>
